MET-7039 api new endpoints  (#26)
* MET-7039 initial approach

* MET-7039 update variable type

* MET-7039 start cleaning up of implementation

* MET-7039 address sonar recommendations

* MET-7039 fix unit test

* MET-7039 add unit test coverage

* MET-7039 unit tests coverage clean up

* MET-7039 add javadoc

* MET-7039 update unit tests

* MET-7039 code review comments

* MET-7039 add unit tests

* MET-7039 clear format

* MET-7039 improve endpoint naming

* MET-7039 update swagger documentation